--- a/index.html
+++ b/index.html
@@ -11,27 +11,22 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
   color: black;
 }
 
+.topnav a:hover {
+}
+
 .topnav a.active {
-  background-color: #04AA6D;
-  color: white;
 }
 
 .topnav .icon {
@@ -63,7 +58,7 @@ body {
 </head>
 <body style="display: flex; flex-direction: column; height: 100vh;">
 
-<div style="display: flex; flex-direction: column; background-color: red; height: 100%;">
+<div style="display: flex; flex-direction: column; height: 100%;">
 
 
     <div class="topnav" id="myTopnav">
