--- a/index.html
+++ b/index.html
@@ -1,64 +1,77 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-.topnav {
-  overflow: hidden;
-}
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-.topnav a {
-  float: left;
-  display: block;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  color: black;
-}
+    .topnav {
+      overflow: hidden;
+    }
 
-.topnav a:hover {
-}
+    .topnav a {
+      float: left;
+      display: block;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+      color: black;
+    }
 
-.topnav a.active {
-}
+    .topnav a:hover {}
 
-.topnav .icon {
-  display: none;
-}
+    .topnav a.active {}
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
+    .topnav .icon {
+      display: none;
+    }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-</style>
+    @media screen and (max-width: 600px) {
+      .topnav a:not(:first-child) {
+        display: none;
+      }
+
+      .topnav a.icon {
+        float: right;
+        display: block;
+      }
+    }
+
+    @media screen and (max-width: 600px) {
+      .topnav.responsive {
+        position: relative;
+      }
+
+      .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+
+      .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+      }
+    }
+  </style>
 </head>
+
 <body style="display: flex; flex-direction: column; height: 100vh;">
 
-<div style="display: flex; flex-direction: column; height: 100%;">
+  <div style="display: flex; flex-direction: column; height: 100%;">
 
 
     <div class="topnav" id="myTopnav">
@@ -69,23 +82,29 @@ body {
       </a>
     </div>
 
-    <div style="padding:16px; flex: 1; background-color: rebeccapurple; overflow-y: scroll;">
-      a
+    <div style="padding:16px; display: flex; flex-direction: column; flex: 1; background-color: rebeccapurple; overflow-y: scroll; height: 100%; gap: 10px;">
+      <div style="padding:16px; flex: 1; background-color: red; min-height: 100%;">
+        a
+      </div>
+      <div style="padding:16px; flex: 1; background-color: red; min-height: 100%;">
+        b
+      </div>
     </div>
-</div>
+  </div>
 
 
 
-<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+  </script>
 
 </body>
+
 </html>
