--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       padding: 0;
     }
 
+
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
@@ -82,11 +83,12 @@
       </a>
     </div>
 
-    <div style="padding:16px; display: flex; flex-direction: column; flex: 1; background-color: rebeccapurple; overflow-y: scroll; height: 100%; gap: 10px;">
-      <div style="padding:16px; flex: 1; background-color: red; min-height: 100%;">
+    <div
+      style="padding:10px; display: flex; flex-direction: column; flex: 1; background-color: rebeccapurple; overflow-y: scroll; height: 100%; gap: 10px;">
+      <div id="home" style="padding:16px; flex: 1; background-color: red; min-height: 100%;">
         a
       </div>
-      <div style="padding:16px; flex: 1; background-color: red; min-height: 100%;">
+      <div id="about" style="padding:16px; flex: 1; background-color: blue; min-height: 100%;">
         b
       </div>
     </div>
@@ -95,6 +97,18 @@
 
 
   <script>
+
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
+      });
+    });
+
+
     function myFunction() {
       var x = document.getElementById("myTopnav");
       if (x.className === "topnav") {
