--- a/index.html
+++ b/index.html
@@ -15,11 +15,30 @@
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
-      background-image: url("./images/bg.avif");
+      /* background-image: url("./images/bg.avif");
       background-size: cover;
-      background-repeat: no-repeat;
-      background-color: #cccccc;
+      background-repeat: no-repeat; */
+      background-color: #05011F;
       height: 100vh;
+    }
+
+    .buy {
+      width: max-content;
+      background-color: #FF8701;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      padding: 20px;
+      font-size: 30px;
+      font-weight: bold;
+      margin: 20px;
+    }
+
+    .buy:hover {
+      cursor: pointer;
+      background-color: #05011F;
+      box-shadow: 0 0 10px 5px #FF8701;
+      color: #FF8701;
     }
 
     .topnav {
@@ -45,7 +64,28 @@
       display: none;
     }
 
+    .container {
+      /* hide scrollbar */
+    }
+
+
+    .banner {
+      display: block;
+      height: 120px;
+      margin-left: auto;
+      border-radius: 20px;
+    }
+
+    .title {
+      font-size: 60px;
+    }
+
+    .description {
+      font-size: 30px;
+    }
+
     @media screen and (max-width: 600px) {
+
       .topnav a:not(:first-child) {
         display: none;
       }
@@ -54,17 +94,24 @@
         float: right;
         display: block;
       }
+
+      .banner {
+        width: 100%;
+        height: unset;
+        border-radius: 10px;
+      }
     }
 
     @media screen and (max-width: 600px) {
       .topnav.responsive {
         position: relative;
-        background-color: rebeccapurple;
+        background-color: #05011F;
         height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        font-weight: bold;
       }
 
       .topnav.responsive .icon {
@@ -82,6 +129,34 @@
         float: none;
         display: block;
         text-align: left;
+        font-size: 40px;
+      }
+
+      .topnav.responsive .icon {
+        font-size: x-large;
+      }
+
+      .buy {
+        background-color: #05011F;
+        box-shadow: 0 0 10px 5px #FF8701;
+        color: #FF8701;
+        font-size: 20px;
+      }
+
+      .buy:hover {
+        cursor: pointer;
+        background-color: #05011F;
+        box-shadow: 0 0 10px 5px #FF8701;
+        color: #FF8701;
+        font-size: 20px;
+      }
+
+      .title {
+        font-size: 40px;
+      }
+
+      .description {
+        font-size: 20px;
       }
     }
   </style>
@@ -100,13 +175,39 @@
       </a>
     </div>
 
-    <div
+    <div id="container"
       style="padding:10px; display: flex; flex-direction: column; flex: 1; overflow-y: scroll; height: 100%; gap: 10px;">
-      <div id="home" style="flex: 1; min-height: 100%;">
-        a
+      <div id="home"
+        style="flex: 1; min-height: 100%; display: flex; flex-direction: column; justify-content: space-evenly;">
+        <div style="width: 100%; background-color: white; border-radius: 20px;">
+          <img src="./images/banner.jpeg" alt="hero" class="banner">
+        </div>
+        <div style="border-radius: 20px; padding: 20px; margin-top: 50px; margin-top: auto; margin-bottom: auto;">
+
+          <h1 class="title"
+            style="color: #FF8701; font-weight: bolder; text-align: center; font-weight: bold; margin-bottom: 20px;">
+            BETCOIN
+          </h1>
+          <p style="color: white; text-align: center;" class="description">
+            <span style="color: #FF8701; font-weight: bold;">
+              Betcoin helvin
+            </span>
+            is coming in a few deys. BUY some
+            <span style="color: #FF8701; font-weight: bold;">
+              $HELVIN
+            </span>
+
+            in preparation!
+          </p>
+        </div>
+        <div style="display: flex; justify-content: center;">
+          <button class="buy">
+            Buy Betcoin
+          </button>
+        </div>
       </div>
       <div id="about" style="flex: 1; min-height: 100%;">
-        b
+        aaa
       </div>
     </div>
   </div>
@@ -119,7 +220,10 @@
       anchor.addEventListener('click', function (e) {
         e.preventDefault();
 
-        myFunction();
+        // only call this if the screen is small
+        if (window.innerWidth < 600) {
+          myFunction();
+        }
 
         document.querySelector(this.getAttribute('href')).scrollIntoView({
           behavior: 'smooth'
@@ -130,10 +234,14 @@
 
     function myFunction() {
       var x = document.getElementById("myTopnav");
+      var container = document.getElementById("container");
       if (x.className === "topnav") {
         x.className += " responsive";
+        container.style.display = "none";
+
       } else {
         x.className = "topnav";
+        container.style.display = "flex";
       }
     }
   </script>
