--- a/index.html
+++ b/index.html
@@ -200,10 +200,21 @@
             in preparation!
           </p>
         </div>
-        <div style="display: flex; justify-content: center;">
+        <div style="display: flex; justify-content: center; flex-direction: column; align-items: center; width: 100%;">
           <button class="buy">
             Buy Betcoin
           </button>
+          <div style="display: flex; gap: 20px; margin-bottom: 100px;">
+            
+            <!-- two icon links for twitter and telegram -->
+            <a href="https://twitter.com/Bitcoinhelvin" target="_blank" style="color: #FF8701; font-size: 30px; background-color: white; padding: 5px; border-radius: 50%;">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <a href="https://t.me/+siEw-hUl9WMyNDc0" target="_blank" style="color: #FF8701; font-size: 30px; background-color: white; padding: 5px; border-radius: 50%;">
+              <i class="fa fa-telegram"></i>
+            </a>
+            
+          </div>
         </div>
       </div>
       <div id="about" style="flex: 1; min-height: 100%;">
