--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
       color: #FF8701;
     }
 
+    .goto {
+      color: white;
+      font-size: 30px;
+      background-color: #05011F;
+      background-color: #FF8701;
+      padding: 10px;
+      border-radius: 50%;
+    }
+
+    .goto:hover {
+      cursor: pointer;
+      box-shadow: 0 0 10px 5px #FF8701;
+      background-color: #05011F;
+
+    }
+
     .topnav {
       overflow: hidden;
     }
@@ -73,7 +89,7 @@
       display: block;
       height: 120px;
       margin-left: auto;
-      border-radius: 20px;
+      border-radius: 10px;
     }
 
     .title {
@@ -151,6 +167,8 @@
         font-size: 20px;
       }
 
+
+
       .title {
         font-size: 40px;
       }
@@ -179,7 +197,8 @@
       style="padding:10px; display: flex; flex-direction: column; flex: 1; overflow-y: scroll; height: 100%; gap: 10px;">
       <div id="home"
         style="flex: 1; min-height: 100%; display: flex; flex-direction: column; justify-content: space-evenly;">
-        <div style="width: 100%; background-color: white; border-radius: 20px;">
+        <div
+          style="width: 100%; background-color: #eeeeee;  border: 3px solid #FF8701; border-radius: 10px; padding: 10px;">
           <img src="./images/banner.jpeg" alt="hero" class="banner">
         </div>
         <div style="border-radius: 20px; padding: 20px; margin-top: 50px; margin-top: auto; margin-bottom: auto;">
@@ -200,25 +219,30 @@
             in preparation!
           </p>
         </div>
-        <div style="display: flex; justify-content: center; flex-direction: column; align-items: center; width: 100%;">
+        <div
+          style="display: flex; justify-content: center; flex-direction: column; align-items: center; width: 100%; gap: 20px;">
           <button class="buy">
             Buy Betcoin
           </button>
           <div style="display: flex; gap: 20px; margin-bottom: 100px;">
-            
+
             <!-- two icon links for twitter and telegram -->
-            <a href="https://twitter.com/Bitcoinhelvin" target="_blank" style="color: #FF8701; font-size: 30px; background-color: white; padding: 5px; border-radius: 50%;">
+            <a href="https://twitter.com/Bitcoinhelvin" target="_blank" class="goto">
               <i class="fa fa-twitter"></i>
             </a>
-            <a href="https://t.me/+siEw-hUl9WMyNDc0" target="_blank" style="color: #FF8701; font-size: 30px; background-color: white; padding: 5px; border-radius: 50%;">
+            <a href="https://t.me/+siEw-hUl9WMyNDc0" target="_blank" class="goto">
               <i class="fa fa-telegram"></i>
             </a>
-            
+
           </div>
         </div>
       </div>
       <div id="about" style="flex: 1; min-height: 100%;">
         aaa
+      </div>
+      <div
+        style="width: 100%; background-color: #eeeeee;  border: 3px solid #FF8701; border-radius: 10px; padding: 10px;">
+        <img src="./images/banner.jpeg" alt="hero" class="banner" style="margin-right: auto;">
       </div>
     </div>
   </div>
