--- a/index.html
+++ b/index.html
@@ -100,6 +100,24 @@
       font-size: 30px;
     }
 
+    .grid {
+      display: grid;
+
+      max-width: 90%;
+      margin: auto;
+      margin-top: 30px;
+      margin-bottom: 30px;
+
+      grid-template-columns: 1fr 1fr 1fr;
+      height: max-content;
+      color: white;
+      padding: 30px;
+      border-radius: 20px;
+      line-height: 1.3;
+      text-align: justify;
+      gap: 20px;
+    }
+
     @media screen and (max-width: 600px) {
 
       .topnav a:not(:first-child) {
@@ -115,6 +133,12 @@
         width: 100%;
         height: unset;
         border-radius: 10px;
+      }
+
+      .grid {
+        grid-template-columns: 1fr;
+        gap: 30px;
+        padding: 10px;
       }
     }
 
@@ -237,8 +261,65 @@
           </div>
         </div>
       </div>
-      <div id="about" style="flex: 1; min-height: 100%;">
-        aaa
+      <div id="about" style="flex: 1; min-height: max-content;">
+        <div class="grid">
+
+
+          <div style="padding: 10px;">
+            <div style="height: max-content; width: 100%;">
+              <img src="./images/1.png" alt="hero" style="width: 100%;">
+            </div>
+            <div style="height: max-content; width: 100%;">
+
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, repellendus eum commodi officiis
+              tempore unde cumque laboriosam delectus architecto. Accusantium in ex voluptates obcaecati neque ipsum
+              maiores distinctio commodi reprehenderit explicabo earum voluptate quibusdam veniam repudiandae
+              exercitationem at, laudantium praesentium ipsa facere natus laborum consequuntur quasi ea. Animi ut ad
+              pariatur rem? Rerum voluptas nisi tempora? Ex consectetur nesciunt minima ipsam. Corrupti voluptatem est
+              ex quisquam harum, cupiditate et vitae, aperiam numquam quas eius deleniti at magnam? Aspernatur animi
+              mollitia illum, minus id amet fugit sed, quas vero dicta nulla iure ab officiis, quasi consequatur odit ad
+              necessitatibus quibusdam! Esse?
+            </div>
+          </div>
+
+          <div style="padding: 10px;">
+            <div style="height: max-content; width: 100%;">
+              <img src="./images/1.png" alt="hero" style="width: 100%;">
+            </div>
+            <div style="height: max-content; width: 100%;">
+
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, repellendus eum commodi officiis
+              tempore unde cumque laboriosam delectus architecto. Accusantium in ex voluptates obcaecati neque ipsum
+              maiores distinctio commodi reprehenderit explicabo earum voluptate quibusdam veniam repudiandae
+              exercitationem at, laudantium praesentium ipsa facere natus laborum consequuntur quasi ea. Animi ut ad
+              pariatur rem? Rerum voluptas nisi tempora? Ex consectetur nesciunt minima ipsam. Corrupti voluptatem est
+              ex quisquam harum, cupiditate et vitae, aperiam numquam quas eius deleniti at magnam? Aspernatur animi
+              mollitia illum, minus id amet fugit sed, quas vero dicta nulla iure ab officiis, quasi consequatur odit ad
+              necessitatibus quibusdam! Esse?
+            </div>
+          </div>
+
+          <div style="padding: 10px;">
+            <div style="height: max-content; width: 100%;">
+              <img src="./images/1.png" alt="hero" style="width: 100%;">
+            </div>
+            <div style="height: max-content; width: 100%;">
+
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, repellendus eum commodi officiis
+              tempore unde cumque laboriosam delectus architecto. Accusantium in ex voluptates obcaecati neque ipsum
+              maiores distinctio commodi reprehenderit explicabo earum voluptate quibusdam veniam repudiandae
+              exercitationem at, laudantium praesentium ipsa facere natus laborum consequuntur quasi ea. Animi ut ad
+              pariatur rem? Rerum voluptas nisi tempora? Ex consectetur nesciunt minima ipsam. Corrupti voluptatem est
+              ex quisquam harum, cupiditate et vitae, aperiam numquam quas eius deleniti at magnam? Aspernatur animi
+              mollitia illum, minus id amet fugit sed, quas vero dicta nulla iure ab officiis, quasi consequatur odit ad
+              necessitatibus quibusdam! Esse?
+            </div>
+          </div>
+
+
+
+        </div>
+
       </div>
       <div
         style="width: 100%; background-color: #eeeeee;  border: 3px solid #FF8701; border-radius: 10px; padding: 10px;">
