--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&family=Jersey+25&display=swap"
+    rel="stylesheet">
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&family=Jersey+25&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
+      font-family: "Jersey 25", sans-serif;
+
     }
 
 
     body {
       margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
       /* background-image: url("./images/bg.avif");
       background-size: cover;
       background-repeat: no-repeat; */
@@ -107,10 +116,11 @@
       margin: auto;
       margin-top: 30px;
       margin-bottom: 30px;
+      font-size: 20px;
 
       grid-template-columns: 1fr 1fr 1fr;
       height: max-content;
-      color: white;
+      color: #ccc;
       padding: 30px;
       border-radius: 20px;
       line-height: 1.3;
