--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
 
     @media screen and (max-width: 600px) {
 
+      .money {
+        display: none;
+      }
+
       .topnav a:not(:first-child) {
         display: none;
       }
@@ -230,7 +234,12 @@
     <div id="container"
       style="padding:10px; display: flex; flex-direction: column; flex: 1; overflow-y: scroll; height: 100%; gap: 10px;">
       <div id="home"
-        style="flex: 1; min-height: 100%; display: flex; flex-direction: column; justify-content: space-evenly;">
+        style="flex: 1; min-height: 100%; display: flex; flex-direction: column; justify-content: space-evenly; position: relative;">
+        <img src="./images/1.png" alt="hero" class="money"
+          style="width: 200px; margin-left: auto; margin-right: auto; position: absolute; right: 0; z-index: -1;">
+        <img src="./images/1.png" alt="hero" class="money"
+          style="width: 200px; margin-left: auto; margin-right: auto; position: absolute; left: 0; z-index: -1;">
+
         <div
           style="width: 100%; background-color: #eeeeee;  border: 3px solid #FF8701; border-radius: 10px; padding: 10px;">
           <img src="./images/banner.jpeg" alt="hero" class="banner">
