--- a/index.html
+++ b/index.html
@@ -290,14 +290,9 @@
             </div>
             <div style="height: max-content; width: 100%;">
 
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, repellendus eum commodi officiis
-              tempore unde cumque laboriosam delectus architecto. Accusantium in ex voluptates obcaecati neque ipsum
-              maiores distinctio commodi reprehenderit explicabo earum voluptate quibusdam veniam repudiandae
-              exercitationem at, laudantium praesentium ipsa facere natus laborum consequuntur quasi ea. Animi ut ad
-              pariatur rem? Rerum voluptas nisi tempora? Ex consectetur nesciunt minima ipsam. Corrupti voluptatem est
-              ex quisquam harum, cupiditate et vitae, aperiam numquam quas eius deleniti at magnam? Aspernatur animi
-              mollitia illum, minus id amet fugit sed, quas vero dicta nulla iure ab officiis, quasi consequatur odit ad
-              necessitatibus quibusdam! Esse?
+              Welcome to BetCoin, where memes meet money in a cosmic collision of hilarity and profit! BetCoin is a
+              community-driven, fair-launched DeFi token that rewards holders with passive income. The more you hold,
+              the more you earn! BetCoin is a deflationary token that is hyper-deflationary in nature.
             </div>
           </div>
 
@@ -307,14 +302,10 @@
             </div>
             <div style="height: max-content; width: 100%;">
 
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, repellendus eum commodi officiis
-              tempore unde cumque laboriosam delectus architecto. Accusantium in ex voluptates obcaecati neque ipsum
-              maiores distinctio commodi reprehenderit explicabo earum voluptate quibusdam veniam repudiandae
-              exercitationem at, laudantium praesentium ipsa facere natus laborum consequuntur quasi ea. Animi ut ad
-              pariatur rem? Rerum voluptas nisi tempora? Ex consectetur nesciunt minima ipsam. Corrupti voluptatem est
-              ex quisquam harum, cupiditate et vitae, aperiam numquam quas eius deleniti at magnam? Aspernatur animi
-              mollitia illum, minus id amet fugit sed, quas vero dicta nulla iure ab officiis, quasi consequatur odit ad
-              necessitatibus quibusdam! Esse?
+              Fun and profit are the name of the game with BetCoin. Our tokenomics are designed to reward holders with
+              passive income. The more you hold, the more you earn! BetCoin is a deflationary token that is
+              hyper-deflationary in nature.
+
             </div>
           </div>
 
@@ -324,14 +315,10 @@
             </div>
             <div style="height: max-content; width: 100%;">
 
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, repellendus eum commodi officiis
-              tempore unde cumque laboriosam delectus architecto. Accusantium in ex voluptates obcaecati neque ipsum
-              maiores distinctio commodi reprehenderit explicabo earum voluptate quibusdam veniam repudiandae
-              exercitationem at, laudantium praesentium ipsa facere natus laborum consequuntur quasi ea. Animi ut ad
-              pariatur rem? Rerum voluptas nisi tempora? Ex consectetur nesciunt minima ipsam. Corrupti voluptatem est
-              ex quisquam harum, cupiditate et vitae, aperiam numquam quas eius deleniti at magnam? Aspernatur animi
-              mollitia illum, minus id amet fugit sed, quas vero dicta nulla iure ab officiis, quasi consequatur odit ad
-              necessitatibus quibusdam! Esse?
+              We will be launching on PancakeSwap in a few days. Stay tuned for more information on how to buy BetCoin
+              and join the community.
+              So get ready to buy some BetCoin and join the community! Use the links below to follow us on Twitter and
+              Telegram for the latest updates.
             </div>
           </div>
 
